# edgelinkd

./: .gitignore  .gitmodules  .pep8  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-cn.md  build.rs  edgelinkd.toml  flows.json  pytest.ini  rustfmt.toml
.github/: CODE_OF_CONDUCT.md  copilot-instructions.md
.github/workflows/: CICD.yml
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/runtime/: debug_channel.rs  engine.rs  engine_events.rs  env.rs  eval.rs  flow.rs  group.rs  http_registry.rs  mod.rs  paths.rs  red_env.rs  status_channel.rs  subflow.rs  web_state_trait.rs
crates/core/src/runtime/context/: localfs.rs  memory.rs  mod.rs
crates/core/src/runtime/model/: error.rs  mod.rs  msg.rs  propex.rs  red_types.rs  settings.rs
crates/core/src/runtime/model/json/: deser.rs  mod.rs  npdeser.rs  red_desers.rs
crates/core/src/runtime/model/variant/: js_support.rs  map.rs  mod.rs
crates/core/src/runtime/nodes/: mod.rs
crates/core/src/runtime/nodes/common_nodes/: catch.rs  comment.rs  complete.rs  console_json.rs  debug.rs  inject.rs  junction.rs  link_call.rs  link_in.rs  link_out.rs  mod.rs  status.rs  subflow.rs  test_once.rs  unknown.rs
crates/core/src/runtime/nodes/function_nodes/: change.rs  delay.rs  exec.rs  mod.rs  range.rs  rbe.rs  switch.rs  template.rs  trigger.rs
crates/core/src/runtime/nodes/function_nodes/function/: context_class.rs  edgelink_class.rs  env_class.rs  mod.rs  node_class.rs
crates/core/src/runtime/nodes/function_nodes/switch/: mod.rs  tests.rs
crates/core/src/runtime/nodes/function_nodes/trigger/: mod.rs  tests.rs
crates/core/src/runtime/nodes/network_nodes/: http_in.rs  http_out.rs  http_proxy_config.rs  http_request.rs  mod.rs  mqtt_broker.rs  mqtt_in.rs  mqtt_out.rs  tcp_get.rs  tcp_in.rs  tcp_out.rs  tls_config.rs  udp_in.rs  udp_out.rs  websocket_client.rs  websocket_in.rs  websocket_listener.rs  websocket_out.rs
crates/core/src/runtime/nodes/parser_nodes/: csv.rs  json.rs  mod.rs  xml.rs  yaml.rs
crates/core/src/runtime/nodes/sequence_nodes/: batch.rs  join.rs  mod.rs  sort.rs  split.rs
crates/core/src/runtime/nodes/storage_nodes/: file.rs  file_in.rs  mod.rs  watch.rs
crates/core/src/text/: json_seq.rs  mod.rs  nom_parsers.rs  parsing.rs  regex.rs
crates/core/src/utils/: async_util.rs  mod.rs  time.rs
crates/core/src/web/: mod.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/pymod/: Cargo.toml
crates/pymod/src/: lib.rs
crates/web/: Cargo.toml
crates/web/public/: index.html
crates/web/src/: api.rs  health.rs  lib.rs  models.rs  server.rs
crates/web/src/handlers/: comms.rs  context.rs  flows.rs  library.rs  locales.rs  mod.rs  nodes.rs  settings.rs  static_resources.rs  web_state.rs
node-plugins/edgelink-nodes-dummy/: Cargo.toml
node-plugins/edgelink-nodes-dummy/src/: lib.rs
scripts/: build-static.ps1  dist-pack.py  specs_diff.json  specs_diff.py  udp_server.py
src/: app.rs  cliargs.rs  config.rs  consts.rs  defaults.rs  env.rs  flows.rs  logging.rs  main.rs  registry.rs  runner.rs
src/commands/: list.rs  mod.rs  run.rs
tests/: REDNODES-SPECS-DIFF.md  __init__.py  requirements.txt
tests/home/: edgelinkd.toml
tests/nodes/function/: test_delay_node.py  test_exec_node.py  test_switch_node.py  test_template_node.py  test_trigger_node.py
tests/nodes/network/: test_tcprequest_node.py  test_udpout_node.py
tests/nodes/parsers/: test_csv_node.py  test_json_node.py  test_xml_node.py  test_yaml_node.py
tests/nodes/sequence/: test_batch_node.py  test_sort_node.py  test_split_node.py
tests/nodes/storage/: test_file_node.py
