[package]
name = "edgelink-web"
version = "0.1.99"
edition = "2024"

[dependencies]
inventory.workspace = true
axum.workspace = true
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
sha2 = { workspace = true }
tokio-tungstenite = { workspace = true, optional = true, features = ["rustls-tls-native-roots"] }
config = { workspace = true }

edgelink-core = { path = "../core" }
